[package]
name = "kerl-p"
version = "0.1.0"
authors = ["Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Kerl implementation in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kerl"

[dependencies]
crunchy = "0.2"
sponge-preview = "0.2.0"
